# tg-wp-bridge

./: .editorconfig  Makefile  README.org  env.example  pyproject.toml
docker/: Dockerfile  docker-compose.yml
tests/: conftest.py  docker-compose.wordpress.yml  test_app.py  test_cli.py  test_config.py  test_env_isolation.py  test_message_parser.py  test_schemas.py  test_security_verification.py  test_telegram_api.py  test_telegram_api_complete_security.py  test_telegram_api_final.py  test_telegram_api_secure.py  test_wordpress_api.py  test_wordpress_api_fixed.py
tg_wp_bridge/: __init__.py  app.py  cli.py  config.py  message_parser.py  schemas.py  telegram_api.py  wordpress_api.py
