[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tg-wp-bridge"
version = "0.1.0"
description = "Minimal Telegram → WordPress bridge (channel posts to blog posts)"
# readme = "README.org"
readme = { file = "README.org", content-type = "text/plain" } # eine frechheit diese

requires-python = ">=3.10"
authors = [
  { name = "cbadger", email = "" }
]
dependencies = [
  "fastapi>=0.112.0",
  "uvicorn[standard]>=0.30.0",
  "httpx>=0.27.0",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.2.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "pytest-asyncio>=0.23.0",
  "pytest-cov>=5.0.0",
  "uv>=0.1.43",
  "hatch>=1.9.4",
  "ruff>=0.1.6",
  "black>=23.0.0",
  "mypy>=1.7.0",
]

[tool.hatch.build.targets.wheel]
packages = ["tg_wp_bridge"]

[tool.hatch.envs.default.scripts]
start = "uvicorn tg_wp_bridge.app:app --reload"
test = "pytest --with pytest --with pytest-asyncio --with pydantic --with pydantic-settings --with fastapi --with httpx"
cov = "pytest --with pytest --with pytest-asyncio --with pydantic --with pydantic-settings --with fastapi --with httpx --cov=tg_wp_bridge"
lint = "ruff check tg_wp_bridge tests"
format = "ruff format tg_wp_bridge tests"
typecheck = "mypy tg_wp_bridge"

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-q"
testpaths = ["tests"]

[dependency-groups]
dev = ["pytest", "pytest-asyncio", "pytest-cov", "ruff", "black", "mypy"]
